# AESAmethods

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  TODOs.md  pyproject.toml  setup.cfg
aesa_pbs/: __init__.py  aesa_pbs.py  biosphere.py
aesa_pbs/changelog/: v0.70.txt  v0.71.txt  v0.72.txt
aesa_pbs/data/: aesa_BiogeochemicalFlows_P.xlsx  aesa_ClimateChange_AtmosphericCO2Concentration.xlsx  aesa_FreshwaterUse_Global.xlsx
aesa_pbs/notebooks/: CreateAESAClimateChange.ipynb  CreateAESAFreshwaterUse.ipynb  CreateAESALandSystemChange.ipynb  CreateAESAOceanAcidification.ipynb  CreateAESAmethod.ipynb
data/raw/: lcia-results-from-sp910-combined.xlsx
notebooks/: CreateAESAOzoneDepletion.ipynb  CreateAESAmethod.ipynb  WriteAESAmethod.ipynb  project_path.py
notebooks/dev/: Convert-xlsx-to-yaml-files.ipynb  ExploreBiosphere3.ipynb  GetAESABiogeochemicalFlows.ipynb  GetAESABiosphereIntegrity-LandUse.ipynb  GetAESABiosphereIntegrity.ipynb  GetAESAClimateChange.ipynb  GetAESAFreshwaterUse.ipynb  GetAESALandSystemChange.ipynb  GetAESAOceanAcidification.ipynb  GetAESAOzoneDepletion.ipynb  Get_N_fertilizers.ipynb  Matching_LandUse_ChangeBiosphereIntegrity.xlsx
notebooks/examples/: how-to-remove-aesa-methods-from-project.ipynb  how-to-use-aesa-methods.ipynb  update-nflows-in-premise-dbs.ipynb
notebooks/test/: checkGlobalWarmingContributor.ipynb  checkPBsmethod.ipynb  project_path.py  test-DataConverter-class.ipynb
src/aesa_pbs/: __init__.py  aesa_pbs.py  data_converter.py  n_direct_fixation.py  pbs_constants.py  utils.py  version.py
(+40 files in other folders)
