[metadata]
name = aesa_pbs
version = attr: aesa_pbs.version.__version__
author = Victor Tulus
author_email = vtulus@ethz.ch
description = Implementation of Absolute Environmental Sustainability Assessment (AESA) methods in brightway
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/vtulus/AESAmethods
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
# install_requires = 
    # bw2io >= 0.8.6
    # bw2data

# dependency_links = https://anaconda.org/cmutel/bw2io/files

[options.packages.find]
where = src